force-app/main/default/objects/Invoice_Object__c/Invoice_Object__c.object-meta.xml
<CustomObject>
    <label>Invoice Object</label>
    <nameField>
        <displayFormat>OBJ-{0000}</displayFormat>
        <label>Invoice Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>