force-app/main/default/objects/Invoice_Object__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Name of the product</inlineHelpText>
    <label>Product</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>